--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3899,10 +3899,8 @@ Client Area
   filter: opacity(1) grayscale(0);
 }
 
-.cleaning-company-area.bg-image {
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
+.cleaning-company-area {
+  background-color: #f0f0f0;
 }
 
 .why-choose-use-area.bg-image {
@@ -5240,6 +5238,7 @@ Client Area
   font-weight: 700;
   font-family: var(--heading-font);
   margin-bottom: 14px;
+  color: #1b1c1e;
 }
 .section-title .title span {
   color: var(--main-color-one);
@@ -5545,7 +5544,7 @@ Client Area
   text-align: center;
   border-radius: 50%;
   color: #fff;
-  background-color: var(--main-color-two);
+  background-color: #1b1a1e;
   margin-bottom: 18px;
   margin-top: -30px;
   z-index: 5;
@@ -5559,12 +5558,17 @@ Client Area
   padding: 40px 20px 20px 20px;
   transition: all 0.3s ease-in-out;
 }
+
+.cleaning-single-item:hover .content {
+  background-color: #1b1c1e;
+}
+
 .cleaning-single-item .content .title {
   margin-top: 10px;
   font-size: 16px;
   font-weight: 700;
   line-height: 34px;
-  color: var(--heading-color);
+  color: #1b1a1e;
   margin-bottom: 16px;
   transition: all 500ms;
 }
