--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4821,7 +4821,7 @@ Client Area
   position: absolute;
   bottom: 0;
   right: 0;
-  border-bottom: 15px solid var(--secondary-color);
+  border-bottom: 15px solid white;
   border-left: 15px solid transparent;
 }
 .single-counterup-01.style-01 .icon {
