--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1974,9 +1974,9 @@ ul.wp-block-latest-posts.is-grid.alignwide {
 }
 
 .widget.footer-widget .widget-title {
-  color: rgba(255, 255, 255, 0.7);
+  color: black;
   padding-bottom: 15px;
-  border-bottom: 1px solid var(--main-color-one);
+  border-bottom: 1px solid black;
   position: relative;
 }
 .widget.footer-widget .widget-title:after {
@@ -1986,7 +1986,7 @@ ul.wp-block-latest-posts.is-grid.alignwide {
   left: 0;
   width: 90px;
   height: 1px;
-  background-color: var(--secondary-color);
+  background-color: black;
 }
 
 .widget.footer-widget p,
@@ -1994,13 +1994,13 @@ ul.wp-block-latest-posts.is-grid.alignwide {
 .widget.footer-widget.widget_calendar caption,
 .widget.footer-widget.widget_calendar th,
 .widget.footer-widget.widget_calendar td {
-  color: rgba(255, 255, 255, 0.7);
+  color: black;
   font-size: 14px;
 }
 
 .widget.footer-widget ul li a,
 .widget.footer-widget ul li {
-  color: rgba(255, 255, 255, 0.7);
+  color: #1b1c1e;
   font-size: 14px;
 }
 
@@ -2107,16 +2107,16 @@ ul.wp-block-latest-posts.is-grid.alignwide {
   position: absolute;
   left: 0;
   top: 0;
-  color: var(--secondary-color);
+  color: black;
 }
 .contact_info_list li.single-info-item .details {
   margin-left: 30px;
 }
 
 .about_us_widget.style-01 {
-  background-color: var(--main-color-one);
+  /* background-color: black; */
   padding: 40px;
-  border-top: 10px solid var(--main-color-two);
+  border-top: 10px solid white;
   position: absolute;
   top: -90px;
 }
@@ -2130,6 +2130,7 @@ ul.wp-block-latest-posts.is-grid.alignwide {
   text-align: center;
   color: #898ba7;
   font-size: 14px;
+  background-color: #1b1c1e;
 }
 
 .widget-testimonial .icon {
@@ -3495,6 +3496,7 @@ ul.wp-block-latest-posts.is-grid.alignwide {
 
 .footer-top {
   border-bottom: 1px solid rgba(114, 108, 148, 0.2);
+  background-color: white;
 }
 .footer-top.style-01 {
   border-bottom: 1px solid rgba(114, 108, 148, 0.2);
@@ -3726,12 +3728,9 @@ ul.wp-block-latest-posts.is-grid.alignwide {
 .testimonial-area {
   position: relative;
   z-index: 0;
+  background-color: #1b1c1e;
 }
-.testimonial-area.bg-image {
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-}
+
 .testimonial-area.bg-image-02 {
   background-size: cover;
   background-position: center;
@@ -3923,7 +3922,7 @@ Client Area
   bottom: 30px;
   width: 50px;
   height: 50px;
-  background-color: var(--main-color-one);
+  background-color: #1b1c1e;
   color: #fff;
   text-align: center;
   line-height: 50px;
@@ -5695,17 +5694,16 @@ Client Area
   background-size: cover;
   background-repeat: no-repeat;
 }
-.single-testimonial-item .thumb::after {
+/* .single-testimonial-item .thumb::after {
   content: "";
   position: absolute;
   right: 0;
   top: 0;
   height: 100%;
   width: 65px;
-  background-color: #fff;
   -webkit-clip-path: polygon(100% 0, 0% 100%, 100% 100%);
           clip-path: polygon(100% 0, 0% 100%, 100% 100%);
-}
+} */
 .single-testimonial-item .content {
   padding-left: 30px;
 }
@@ -5728,6 +5726,7 @@ Client Area
   line-height: 35px;
   max-width: 400px;
   font-weight: 400;
+  color: #f0f0f0;
 }
 .single-testimonial-item .content .author-details .author-meta {
   display: flex;
@@ -5738,12 +5737,13 @@ Client Area
   font-size: 12px;
   font-weight: 600;
   margin-bottom: 0;
+  color: white;
 }
 .single-testimonial-item .content .author-details .author-meta .ratings {
   margin-right: 5px;
   font-size: 12px;
   line-height: 12px;
-  color: var(--secondary-color);
+  color: #f0f0f0;
 }
 
 .single-testimonial-item-02 {
