--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1396,16 +1396,7 @@ ul.wp-block-latest-posts.is-grid.alignwide {
   background-size: cover;
   background-position: center;
 }
-.breadcrumb-area:before {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(37, 62, 166, 0.7);
-  z-index: -1;
-}
+
 .breadcrumb-area.extra {
   padding-bottom: 138px;
 }
@@ -1425,11 +1416,11 @@ ul.wp-block-latest-posts.is-grid.alignwide {
   display: inline-block;
   padding: 5px 20px;
   text-transform: uppercase;
-  background-color: var(--main-color-two);
+  background-color: #1b1c1e;
   font-size: 14px;
   line-height: 20px;
   max-width: 600px;
-  color: rgba(255, 255, 255, 0.9);
+  color: #f0f0f0;
   margin-bottom: 20px;
 }
 .breadcrumb-area .page-list {
@@ -1448,7 +1439,7 @@ ul.wp-block-latest-posts.is-grid.alignwide {
   padding-left: 0;
 }
 .breadcrumb-area .page-list li:first-child a {
-  color: rgba(255, 255, 255, 0.9);
+  color: #f0f0f0;
 }
 .breadcrumb-area .page-list li:first-child:after {
   display: none;
@@ -1462,7 +1453,7 @@ ul.wp-block-latest-posts.is-grid.alignwide {
   font-family: "fontawesome";
 }
 .breadcrumb-area .page-list li a {
-  color: var(--secondary-color);
+  color: #f0f0f0;
   transition: all 0.3s ease-in;
 }
 .breadcrumb-area .page-list li a:hover {
@@ -3801,12 +3792,13 @@ ul.wp-block-latest-posts.is-grid.alignwide {
   color: #c1c1c1;
 }
 .request-page-form.style-01 .submit-btn {
-  background-color: var(--secondary-color);
+  background-color: #1b1c1e;
+  color: #f0f0f0;
 }
 .request-page-form.style-01 .submit-btn:hover {
-  background-color: var(--main-color-two);
-  color: #fff;
-  border: 1px solid var(--main-color-two);
+  background-color: transparent;
+  color: #1b1c1e;
+  border: 1px solid #1b1c1e;
 }
 .request-page-form .form-group textarea {
   max-height: 100px;
@@ -4632,7 +4624,7 @@ Client Area
   text-align: center;
   margin-right: 20px;
   font-size: 45px;
-  color: var(--main-color-two);
+  color: #f0f0f0;
   transition: all 0.3s ease-in;
 }
 .single-contact-item .content {
@@ -4644,11 +4636,12 @@ Client Area
   line-height: 20px;
   margin-bottom: 10px;
   display: block;
-  color: var(--heading-color);
+  color: #f0f0f0;
 }
 .single-contact-item .content .details {
   font-size: 14px;
   font-weight: 500;
+  color: #f0f0f0
 }
 
 .contact-info-list {
@@ -4723,6 +4716,14 @@ Client Area
 }
 .contact-page-form .btn-wrapper .boxed-btn {
   font-size: 14px;
+  border: 1px solid #f0f0f0;
+  color: #f0f0f0;
+  background-color: transparent;
+}
+
+.contact-page-form .btn-wrapper .boxed-btn:hover {
+  background-color: #f0f0f0;
+  color: #1b1c1e;
 }
 
 /*----------------------------
@@ -5237,7 +5238,7 @@ Client Area
   font-weight: 700;
   font-family: var(--heading-font);
   margin-bottom: 14px;
-  color: #1b1c1e;
+  color: #f0f0f0;
 }
 .section-title .title span {
   color: var(--main-color-one);
@@ -5717,9 +5718,9 @@ Client Area
   height: 80px;
   line-height: 80px;
   text-align: center;
-  background-color: var(--main-color-two);
+  background-color: #f0f0f0;
   border-radius: 50%;
-  color: #fff;
+  color: #1b1c1e;
 }
 .single-testimonial-item .content .description {
   font-size: 18px;
@@ -6068,4 +6069,8 @@ Client Area
 .flaticon-vacuum,
 .flaticon-dish {
   color: #1b1c1e;
+}
+
+.contact-inner-area {
+  background-color: #1b1c1e;
 }
