okay bug now fixed

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -92,7 +92,7 @@
         padding: 293px 0 130px;
     }
     .header-area.style-02 {
-        padding: 165px 0 205px;
+        padding: 0;
     }
     .cleaning-single-item .thumb img {
         width: 100%;
