--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -92,7 +92,7 @@
         padding: 293px 0 130px;
     }
     .header-area.style-02 {
-        padding: 0;
+        padding: 165px 0 205px;
     }
     .cleaning-single-item .thumb img {
         width: 100%;
@@ -255,7 +255,7 @@
         padding: 165px 0 165px;
     }
     .header-bottom-wrapper.m-top-03 {
-        margin-top: 0px;
+        margin-top: 120px;
     }
     .provide-single-item.style-03 {
         margin-top: 0;
